# nanogpt-candle

./: .gitignore  Cargo.toml  LICENSE  README.md
example-config/: model-config.json
src/: config.rs  dataloader.rs  datasets.rs  lib.rs  main.rs  models.rs  tokenizer.rs  util.rs
src/config/: pretrained_config.rs  training_config.rs
src/models/: bigram.rs  transformer.rs
src/tokenizer/: models.rs  trainer.rs
src/tokenizer/models/: character.rs
src/tokenizer/models/character/: trainer.rs
