[package]
name = "nanogpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
candle-core = "0.4.1"
candle-datasets = "0.4.1"
candle-nn = "0.4.1"
clap = { version = "4.5.0", features = ["derive"] }
hf-hub = "0.3.2"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["std", "derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"

[features]
# Nvidia support
cuda = ["candle-core/cuda"]
# Apple Metal GPU support
metal = ["candle-core/metal"]
